--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <meta name="keywords" content="futureflash, cydia12, cydia ios 12 icon, cydia ios 12, winterboard, snowboard, ios 12.4, A12, iphone xr cydia icon new, 2019, future-flash, repository">
 </head>
 
 <body>
