--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <meta name="keywords" content="futureflash, cydia12, cydia ios 12 icon, cydia ios 12, winterboard, snowboard, ios 12.4, A12, iphone xr cydia icon new, 2019, future-flash, repository">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 </head>
 
 <body>
